--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -8,6 +8,8 @@
          </div>
           <div *ngIf="m.name.touched && m.name.invalid" class="alert alert-danger">
         <div *ngIf="m.name.errors?.required">Name is required</div>
+        <div *ngIf="m.name.errors?.pattern">Name is required</div>
+        
         </div>
         
        </div>
@@ -18,6 +20,7 @@
          </div>
          <div *ngIf="m.username.touched && m.username.invalid" class="alert alert-danger">
           <div *ngIf="m.username.errors?.required">UserName is required</div>
+          <div *ngIf="m.username.errors?.pattern">UserName is required</div>
           </div>
             
       </div>
@@ -28,7 +31,8 @@
          </div>
       
          <div *ngIf="m.email.invalid && m.email.touched" class="alert alert-danger">
-          <div *ngIf="m.email.errors">Email is required.</div>
+          <div *ngIf="m.email.errors?.required">Email is required.</div>
+          <div *ngIf="m.email.errors?.pattern">Email type example@gmail.com</div>
         </div>
       </div>
 
@@ -43,6 +47,7 @@
          
          <div *ngIf="m.phone.invalid && m.phone.touched" class="alert alert-danger">
           <div *ngIf="m.phone.errors?.required">Phone Number is required.</div>
+          <div *ngIf="m.phone.errors?.pattern">Phone Number is required.</div>
           <div *ngIf="m.phone.errors?.minlength">Phone Number must be 11 character</div>
         </div>
       </div>
@@ -75,7 +80,11 @@
       <div class="col"></div>
       <div class="col"></div>
       <div class="col d-flex flex-row-reverse">
-        <button type="submit" class="btn btn-dark btn-lg  btn-s">Register</button></div>
+        <button type="submit"
+         class="btn btn-dark btn-lg  btn-s" 
+         (click)="trimField(this.register)"
+         >Register</button>
+      </div>
     </div>
     
   </form>
