--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -41,7 +41,10 @@
       <div class="col">
         <div class="mb-3">
             <label class="form-label">Phone Number</label>
-            <input type="phone" class="form-control shadow-none" formControlName="phone" minlength="11" maxlength="11" placeholder="08085017997">
+            <input type="phone" class="form-control shadow-none" 
+            formControlName="phone"
+            (keypress)="numericalOnly($event)"
+             minlength="11" maxlength="11" placeholder="08085017997">
         
          </div>
          
@@ -92,8 +95,9 @@
 
   
   <div class="container mt-5 w-75">
-    <form class="d-flex" (ngSubmit)="searchDoctors()" [formGroup]="searchForm" novalidate>
+    <form class="d-flex"  [formGroup]="searchForm" novalidate>
       <input class="form-control shadow-none" type="search" 
+      (keyup)="filter()"
       [(ngModel)]="keyWord"
       formControlName="keyword"
       placeholder="Search by name or username(e.g ahmodu ismail or @Bret" aria-label="Search">
