--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -100,7 +100,7 @@
       (keyup)="filter()"
       [(ngModel)]="keyWord"
       formControlName="keyword"
-      placeholder="Search by name or username(e.g ahmodu ismail or @Bret" aria-label="Search">
+      placeholder="Search by name or username" aria-label="Search">
       <button class="btn btn-outline-primary" type="submit" >Search</button>
     </form>
 
